// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultTemplateCard Displays a card for activity tracker 1`] = `
<div
  option_name="default-activity"
>
  
  <div
    class="card-glyph"
  >
    <svg-activity-stub />
  </div>
  <div
    class="card-content"
  >
    <h4
      class="card-title"
    >
      Activity
    </h4>
    <div
      class="card-description"
    >
      <span
        class="card-description-content"
      >
        Activities
      </span>
    </div>
  </div>
  
</div>
`;

exports[`DefaultTemplateCard Displays a card for bug tracker 1`] = `
<div
  option_name="default-bug"
>
  
  <div
    class="card-glyph"
  >
    <svg-bug-stub />
  </div>
  <div
    class="card-content"
  >
    <h4
      class="card-title"
    >
      Bug
    </h4>
    <div
      class="card-description"
    >
      <span
        class="card-description-content"
      >
        Bugs
      </span>
    </div>
  </div>
  
</div>
`;
